objects/LAT_FormBuilderSchema__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Uruguay</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fields_Count__c</fullName>
        <label>Fields Count</label>
        <summarizedField>LAT_FormBuilderPages__c.Fields_Count__c</summarizedField>
        <summaryForeignKey>LAT_FormBuilderPages__c.Form_Builder_Schema__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pages_Count__c</fullName>
        <label>Pages Count</label>
        <summaryForeignKey>LAT_FormBuilderPages__c.Form_Builder_Schema__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalEntries__c</fullName>
        <label>Total Entries</label>
        <summaryForeignKey>LAT_FormBuilderEntries__c.Form_Builder_Schema__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>LAT Form Builder Schema</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAT Form Builder Schemas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>